--- a/index.html
+++ b/index.html
@@ -1,64 +1,231 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mohamed Abozied</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="fav-icon/favicon.ico">
+  <meta charset="utf-8">
+  <title>TinDog</title>
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital@1&family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Fontawesome -->
+  <script src="https://kit.fontawesome.com/72723a8517.js" crossorigin="anonymous"></script>
+
+
+  <!-- CSS Style -->
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
+
 <body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="Clouds Image">
-    <h1>I'm Mohamed.</h1>
-    <h2>A web designer.</h2>
-    <img class=""   src="images/mountain.png" alt="Mountains Image">
-    <img class="bottom-cloud" src="images/cloud.png" alt="Clouds Image">
-  </div>
-  <div class="middle-container">
-  <div class="profile">
-    <img class = "personal-img" src="images/mohamed-circular.png" alt="Mohamed's Image">
-    <h2>Hello.</h2>
-    <p class="hello-p">I'm Mohamed Abozied, graduate of computer science and information technology colege 2011, and I'm interested in every thing that
-      related to tech.</p>
-  </div>
-  <hr>
-  <div class="skills">
-    <h2>My Skills.</h2>
-    <div class="skill-row">
-      <img class="code-img" src="images/web-design.png" alt="">
-      <h3>HTML 5 is Essential</h3>
-      <p>I'm making my way through the web dev, of course stargin with HTML 5, offcourse to buil a
-      website struc we need the only and the one HTML (Hyper Text Markup Language), so I think I can
-     do pretty much well with it.</p>
-    </div>
-    <div class="skill-row">
-      <img class="css-img" src="images/css-3.png" alt="Internet is growing rapidly">
-      <h3>..And Dont Forget CSS3</h3>
-      <p>Athough that it's an overwhelming, but it it's qouite fun, with CSS3 we can turn the ugliness of
-      the any website page into something quite sight appealing. 💚</p>
-    </div>
-  </div>
-  <hr>
-  <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h3>Feel Free To Contact Me Any Time</h3>
-    <p class="get-in-touch-p">You can email me, visit my linked, twitter profile, let me know about youe. 🙂</p>
-    <a class="btn" target="_blank" href="mailto:mabozied77@gmail.com">CONTACT ME</a>
-  </div>
-</div>
+
+  <section class="colored-section" id="title">
+
+    <div class="container-fluid">
+
+      <!-- Nav Bar -->
+
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="">tindog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ms-auto">
+            <li class="navbar-item">
+              <a class="nav-link" href="#footer">Contact</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="#cta">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
 
-<div class="bottom-container">
-  <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/mohamed-noorelhuda-237b4912a/">LinkedIn</a>
-  <a class="footer-link" target="_blank" href="https://twitter.com/zahaj77">Twitter</a>
-  <a class="footer-link" href="#">Website</a>
-  <p class="copy">© 2022 Mohamed Abozied.</p>
-</div>
+      <!-- Title -->
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button">
+            <i class="fa-brands fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+        </div>
+        <div class="col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+
+  <!-- Features -->
+
+  <section class="white-section" id="features">
+    <div class="container-fluid">
+
+
+
+      <div class="row">
+        <div class="col-lg-4  feature-div">
+          <i class="features-icon fa-solid fa-circle-check  fa-4x"></i>
+          <h3 class="feature-title">Easy to use.</h3>
+          <p class="features-paragraph">So easy to use, even your dog could do it.</p>
+        </div>
+
+        <div class="col-lg-4 feature-div">
+          <i class="features-icon fa-solid fa-bullseye fa-4x"></i>
+          <h3 class="feature-title">Elite Clientele</h3>
+          <p class="features-paragraph">We have all the dogs, the greatest dogs.</p>
+        </div>
+
+        <div class="col-lg-4 feature-div">
+          <i class="features-icon fa-solid fa-heart fa-4x"></i>
+          <h3 class="feature-title">Guaranteed to work.</h3>
+          <p class="features-paragraph">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Testimonials -->
+
+  <section class="colored-section" id="testimonials">
+
+    <!-- Testimonials Carousel -->
+
+    <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-pause="hover">
+      <div class="carousel-inner">
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item container-fluid">
+
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+
+  </section>
+
+
+  <!-- Press -->
+
+  <section class="colored-section" id="press">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+
+  </section>
+
+
+  <!-- Pricing -->
+
+  <section class="white-section" id="pricing">
+
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+    <p>Simple and affordable price plans for your and your dog.</p>
+
+    <div class="row">
+      <div class="pricing-card col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="pricing-card col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="pricing-card  col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+
+  <!-- Call to Action -->
+
+  <section class="colored-section" id="cta">
+
+    <div class="container-fluid">
+      <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="download-button btn btn-lg btn-dark" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+      <button class="download-button btn btn-lg btn-light" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
+    </div>
+  </section>
+
+
+  <!-- Footer -->
+
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+
+
+      <i class="social-icon fa-brands fa-facebook-f"></i>
+      <i class="social-icon fa-brands fa-twitter"></i>
+      <i class="social-icon fa-brands fa-instagram"></i>
+      <i class="social-icon fa-solid fa-envelope"></i>
+      <p>© Copyright TinDog</p>
+    </div>
+  </footer>
 
 </body>
+
 </html>
