Add favicon code to index file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- CSS Style -->
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="fav-icon/favicon.ico">
 
 </head>
 
