--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
   <!-- CSS Style -->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="fav-icon/favicon.ico">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="favicon/tindog-favicon.ico">
 
 </head>
 
